# Hoshino

./: .gitignore  ACCOUNT_LINKING.md  Anchor.toml  App.tsx  Cargo.toml  DIRECTION.md  README.md  TODO.md  app.json  env.example  index.js  metro-empty-shim.js  metro.config.js  package-lock.json  package.json  polyfills.js
android/: settings.gradle
android/app/: build.gradle
backend/firebase/: README.md  firebase.json  firestore.indexes.json  firestore.rules
docs/: DEV_NOTES.md  DIRECTION.md  GAME_MECHANICS.md  INSTALL_APK.md  MAGICBLOCK_VRF.md  MAGICBLOCK_VRF_OPS.md  SETUP_ANDROID.md  TODO.md  WIDGET_SETUP.md
idl/: hoshino_vrf_consumer.json
programs/hoshino-vrf-consumer/: Cargo.toml
programs/hoshino-vrf-consumer/src/: lib.rs
scripts/: release.sh
src/assets/: index.ts
src/components/: CharacterChat.tsx  DeviceChrome.tsx  FeedingPage.tsx  ForagePopOut.tsx  Frame.tsx  Gallery.tsx  GameContainer.tsx  GamesList.tsx  GlobalLeaderboard.tsx  IngredientSelection.tsx  InnerScreen.tsx  LoginScreen.tsx  MoonCycleDisplay.tsx  MoonlingInteraction.tsx  MoonokoCollection.tsx  MoonokoInteraction.tsx  MoonokoSelection.tsx  Navigation.tsx  Profile.tsx  Room.tsx  SeekerWalletButton.tsx  Settings.tsx  Shop.tsx  SleepAnimation.tsx  SleepConfirmationModal.tsx  SleepMode.tsx  SleepOverlay.tsx  SleepScreen.tsx  StarFragmentMissions.tsx  Starburst.tsx  WalletButton.tsx  WelcomeScreen.tsx  ZoomOutOverlay.tsx
src/config/: AssetRegistry.ts  firebase.ts  vrf.ts
src/contexts/: ChromeContext.tsx  FirebaseAuthContext.tsx  GameStateContext.tsx  PrivyContext.tsx  WalletContext.tsx
(+58 files in other folders)
